assets/css/style.css
/*-----------------------------------------------------------------------------------

    Template Name: AppLand
    Template URI: uideck.com/templates/appland
    Support: https://uideck.com/support/
    Version: 1.0

-----------------------------------------------------------------------------------

    CSS INDEX
    ===================

    01. Theme default CSS
	02. Header
    03. Hero
	04. Footer

-----------------------------------------------------------------------------------*/


/*===========================
      01.COMMON css 
===========================*/

@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Poppins:300,400,500,600,700&display=swap");
body {
    font-family: "Open Sans", sans-serif;
    font-weight: normal;
    font-style: normal;
    color: #747E88;
    overflow-x: hidden;
}

* {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

img {
    max-width: 100%;
}

a:focus,
input:focus,
textarea:focus,
button:focus {
    text-decoration: none;
    outline: none;
}

a:focus,
a:hover {
    text-decoration: none;
}

i,
span,
a {
    display: inline-block;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Poppins", sans-serif;
    font-weight: 700;
    color: #38424D;
    margin: 0px;
}

h1 {
    font-size: 48px;
}

h2 {
    font-size: 36px;
}

h3 {
    font-size: 28px;
}

h4 {
    font-size: 22px;
}

h5 {
    font-size: 18px;
}

h6 {
    font-size: 16px;
}

ul,
ol {
    margin: 0px;
    padding: 0px;
    list-style-type: none;
}

p {
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    color: #747E88;
    margin: 0px;
}

.bg_cover {
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    width: 100%;
    height: 100%;
}


/*===== All Button Style =====*/

.main-btn {
    display: inline-block;
    font-weight: 500;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    border: 2px solid #0898E7;
    padding: 0 25px;
    font-size: 16px;
    height: 55px;
    line-height: 51px;
    border-radius: 5px;
    color: #fff;
    cursor: pointer;
    z-index: 5;
    -webkit-transition: all 0.4s ease-out 0s;
    -moz-transition: all 0.4s ease-out 0s;
    -ms-transition: all 0.4s ease-out 0s;
    -o-transition: all 0.4s ease-out 0s;
    transition: all 0.4s ease-out 0s;
    background-color: #0898E7;
}

.main-btn:hover {
    background-color: rgba(8, 152, 231, 0.7);
    color: #fff;
    border-color: transparent;
}

.main-btn.main-btn-2 {
    background-color: transparent;
    color: #525A63;
    border-color: #525A63;
}

.main-btn.main-btn-2:hover {
    background-color: rgba(82, 90, 99, 0.5);
    color: #525A63;
}

@keyframes animation1 {
    0% {
        -webkit-transform: scale(1);
        -moz-transform: scale(1);
        -ms-transform: scale(1);
        -o-transform: scale(1);
        transform: scale(1);
    }
    50% {
        -webkit-transform: scale(1.2);
        -moz-transform: scale(1.2);
        -ms-transform: scale(1.2);
        -o-transform: scale(1.2);
        transform: scale(1.2);
    }
    100% {
        -webkit-transform: scale(1);
        -moz-transform: scale(1);
        -ms-transform: scale(1);
        -o-transform: scale(1);
        transform: scale(1);
    }
}

@-webkit-keyframes animation1 {
    0% {
        -webkit-transform: scale(1);
        -moz-transform: scale(1);
        -ms-transform: scale(1);
        -o-transform: scale(1);
        transform: scale(1);
    }
    50% {
        -webkit-transform: scale(1.2);
        -moz-transform: scale(1.2);
        -ms-transform: scale(1.2);
        -o-transform: scale(1.2);
        transform: scale(1.2);
    }
    100% {
        -webkit-transform: scale(1);
        -moz-transform: scale(1);
        -ms-transform: scale(1);
        -o-transform: scale(1);
        transform: scale(1);
    }
}


/*===== All Section Title Style =====*/

.section-title .title {
    font-size: 35px;
    font-weight: 600;
}

@media (max-width: 767px) {
    .section-title .title {
        font-size: 22px;
    }
}

@media only screen and (min-width: 576px) and (max-width: 767px) {
    .section-title .title {
        font-size: 26px;
    }
}

.section-title .text {
    margin-top: 20px;
}


/*===== All Slick Slide Outline Style =====*/

.slick-slide {
    outline: 0;
}


/*===== All Preloader Style =====*/

.preloader {
    /* Body Overlay */
    position: fixed;
    top: 0;
    left: 0;
    display: table;
    height: 100%;
    width: 100%;
    /* Change Background Color */
    background: #fff;
    z-index: 99999;
}

.preloader .loader {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
}

.preloader .loader .ytp-spinner {
    position: absolute;
    left: 50%;
    top: 50%;
    width: 64px;
    margin-left: -32px;
    z-index: 18;
    pointer-events: none;
}

.preloader .loader .ytp-spinner .ytp-spinner-container {
    pointer-events: none;
    position: absolute;
    width: 100%;
    padding-bottom: 100%;
    top: 50%;
    left: 50%;
    margin-top: -50%;
    margin-left: -50%;
    -webkit-animation: ytp-spinner-linspin 1568.23529647ms linear infinite;
    -moz-animation: ytp-spinner-linspin 1568.23529647ms linear infinite;
    -o-animation: ytp-spinner-linspin 1568.23529647ms linear infinite;
    animation: ytp-spinner-linspin 1568.23529647ms linear infinite;
}
/* ... */

